--- a/packages/pkg2/package.json
+++ b/packages/pkg2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pkg2",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jquery": "^3.6.0"
+  }
 }
