--- a/packages/pkg1/package.json
+++ b/packages/pkg1/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pkg1",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.6.0",
-    "pkg2": "^1.0.0"
+    "pkg2": "^1.0.1-alpha.0"
   }
 }
