--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,7 @@
     "command": {
         "publish": {
             "skipGit": true,
-            "registry": "https://registry.npmjs.orgaa/"
+            "registry": "https://registry.npmjs.org/"
         }
     }
 }
