--- a/packages/pkg1/package.json
+++ b/packages/pkg1/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "pkg1",
-  "version": "1.0.3-alpha.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "jquery": "^3.6.0",
-    "pkg2": "^1.0.1"
-  }
+    "name": "@neokekeke/pkg1",
+    "version": "1.0.3-alpha.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "jquery": "^3.6.0",
+        "pkg2": "^1.0.1"
+    },
+    "publishConfig": {
+        "access": "public"
+    }
 }
