--- a/packages/pkg3/package.json
+++ b/packages/pkg3/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "@neokekeke/pkg3",
-  "version": "1.0.0",
-  "description": "> TODO: description",
-  "author": "",
-  "homepage": "https://github.com/Neokekeke/lerna-packages#readme",
-  "license": "ISC",
-  "main": "lib/pkg3.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Neokekeke/lerna-packages.git"
-  },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "bugs": {
-    "url": "https://github.com/Neokekeke/lerna-packages/issues"
-  }
+    "name": "@neokekeke/pkg3",
+    "version": "1.0.0",
+    "description": "> TODO: description",
+    "author": "",
+    "homepage": "https://github.com/Neokekeke/lerna-packages#readme",
+    "license": "ISC",
+    "main": "lib/pkg3.js",
+    "directories": {
+        "lib": "lib",
+        "test": "__tests__"
+    },
+    "files": [
+        "lib"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Neokekeke/lerna-packages.git"
+    },
+    "scripts": {
+        "test": "echo \"Error: run tests from root\" && exit 1"
+    },
+    "bugs": {
+        "url": "https://github.com/Neokekeke/lerna-packages/issues"
+    },
+    "publishConfig": {
+        "access": "public"
+    },
+    "gitHead": "6dd813b1a046c7d0637e0f068efb9191d635c99e"
 }
