--- a/packages/pkg3/package.json
+++ b/packages/pkg3/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@neokekeke/pkg3",
-    "version": "1.0.0",
+    "version": "1.0.1-alpha.0",
     "description": "> TODO: description",
     "author": "",
     "homepage": "https://github.com/Neokekeke/lerna-packages#readme",
