--- a/packages/pkg1/package.json
+++ b/packages/pkg1/package.json
@@ -10,8 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "jquery": "^3.6.0",
-        "pkg2": "^1.0.1"
+        "jquery": "^3.6.0"
     },
     "publishConfig": {
         "access": "public"
