--- a/packages/pkg2/package.json
+++ b/packages/pkg2/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@neokekeke/pkg3": "^1.0.1-alpha.0",
         "jquery": "^3.6.0"
     },
     "publishConfig": {
